[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fastjson"
version = "2.0.0"
description = "FastestJSONInTheWest v2.0 - High-performance C++23 JSON library with SIMD, LINQ, and reduced-GIL bindings"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Olumuyiwa Oluwasanmi", email = "olumuyiwa@example.com" },
]
license = { text = "BSD-4-Clause" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: POSIX :: Linux",
]
keywords = ["json", "parser", "simd", "avx2", "c++23", "nanobind", "fastjson"]
dependencies = [
  "numpy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/oldboldpilot/fastestjsoninthewest"
Repository = "https://github.com/oldboldpilot/fastestjsoninthewest"

[tool.scikit-build]
cmake.version = ">=3.28"
cmake.build-type = "Release"
wheel.license-files = ["LICENSE*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
